--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <video autoplay loop>
         <source src="Resources/Videos/excursion.mp4" type="video/mp4"
     </video>
+<h2 class="header--secondary">Your personal travel guide</h2>
+<h4 class="header--sub-header">Excursion remember places you like, and recommens new points of internet around you.</h4>
 </body>
 </html>
