--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <p><img src="/resources/images/camp.jpg"></p>
 <p><img src="resources/images/phone.png"></p>
 <h4 class="header--sub--header">Coming soon for iPhone and Android</h4>
+<p class="footercopyright">Excursion</p>
 </body>
 </html>
